src/snapshots/simplexpr__tests__test-10.snap
---
source: src/lib.rs
expression: "p.parse(Lexer::new(\"\\\"foo\\\" + 12.4\"))"

---
Ok(
    ("foo" + "12.4"),
)
