src/snapshots/simplexpr__tests__test-2.snap
---
source: src/lib.rs
expression: "p.parse(\"2 + 5\")"

---
Ok(
    BinOp(
        Literal(
            "2",
        ),
        Plus,
        Literal(
            "5",
        ),
    ),
)
