src/snapshots/simplexpr__tests__test-4.snap
---
source: src/lib.rs
expression: "p.parse(\"(1 + 2) * 2\")"

---
Ok(
    BinOp(
        BinOp(
            Literal(
                "1",
            ),
            Plus,
            Literal(
                "2",
            ),
        ),
        Times,
        Literal(
            "2",
        ),
    ),
)
