src/snapshots/simplexpr__tests__test-5.snap
---
source: src/lib.rs
expression: "p.parse(\"1 + true ? 2 : 5\")"

---
Ok(
    IfElse(
        BinOp(
            Literal(
                "1",
            ),
            Plus,
            Literal(
                "true",
            ),
        ),
        Literal(
            "2",
        ),
        Literal(
            "5",
        ),
    ),
)
