src/snapshots/simplexpr__tests__test-6.snap
---
source: src/lib.rs
expression: "p.parse(\"1 + true ? 2 : 5 + 2\")"

---
Ok(
    IfElse(
        BinOp(
            Literal(
                "1",
            ),
            Plus,
            Literal(
                "true",
            ),
        ),
        Literal(
            "2",
        ),
        BinOp(
            Literal(
                "5",
            ),
            Plus,
            Literal(
                "2",
            ),
        ),
    ),
)
