src/snapshots/simplexpr__tests__test-7.snap
---
source: src/lib.rs
expression: "p.parse(\"1 + (if true then 2 else 5) + 2\")"

---
Ok(
    BinOp(
        BinOp(
            Literal(
                "1",
            ),
            Plus,
            IfElse(
                Literal(
                    "true",
                ),
                Literal(
                    "2",
                ),
                Literal(
                    "5",
                ),
            ),
        ),
        Plus,
        Literal(
            "2",
        ),
    ),
)
