src/snapshots/simplexpr__tests__test-8.snap
---
source: src/lib.rs
expression: "p.parse(\"foo(1, 2)\")"

---
Ok(
    FunctionCall(
        "foo",
        [
            Literal(
                "1",
            ),
            Literal(
                "2",
            ),
        ],
    ),
)
